--- a/src/views/update-product.ejs
+++ b/src/views/update-product.ejs
@@ -3,8 +3,9 @@
         <%=errorMessage%>
     </div>
     <%}%>
-        <h1 class="mt-5 mb-4">Add New Product</h1>
+        <h1 class="mt-5 mb-4">Update Product</h1>
         <form action="/" method="post">
+            <input type="hidden" class="form-control" id="name" name="name">
             <label for="name" class="form-label">Product Name</label>
             <input type="text" class="form-control" id="name" name="name">
             <div class="mb-3">
