Update product is getting all the details clearly but not updating it in the view

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -27,8 +27,8 @@
                 </td>
                 <td><img src="<%= product.imageurl %>"></td>
                 <td>
-                    <a href="update-product/<%= product._id %>" class="btn btn-warning">Update Product</a>
-                    <a href="" class="btn btn-warning">Delete Product</a>
+                    <a href="/update-product/<%= product._id %>" class="btn btn-warning">Update Product</a>
+                    <a href="" class="btn btn-danger">Delete Product</a>
                 </td>
             </tr>
             <%})%>
