Added delete function to the project but it is not working

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -28,7 +28,7 @@
                 <td><img src="<%= product.imageurl %>"></td>
                 <td>
                     <a href="/update-product/<%= product._id %>" class="btn btn-warning">Update Product</a>
-                    <a href="" class="btn btn-danger">Delete Product</a>
+                    <a href="/delete-product/<%= product._id %>" class="btn btn-danger">Delete Product</a>
                 </td>
             </tr>
             <%})%>
