Added confirmation before deletion

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -28,7 +28,8 @@
                 <td><img src="<%= product.imageurl %>"></td>
                 <td>
                     <a href="/update-product/<%= product._id %>" class="btn btn-warning">Update Product</a>
-                    <a href="/delete-product/<%= product._id %>" class="btn btn-danger">Delete Product</a>
+                    <button class="btn btn-danger" onclick="deleteProduct('<%= product._id %>')">Delete Product</button>
+                    <!--<a href="/delete-product/<%= product._id %>" class="btn btn-danger">Delete Product</a>-->
                 </td>
             </tr>
             <%})%>
