--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -11,6 +11,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script src="main.js"></script>
+    <link rel="stylesheet" href="/css/headers.css">
     <title>Products</title>
 </head>
 
