--- a/src/views/new-product.ejs
+++ b/src/views/new-product.ejs
@@ -1,9 +1,9 @@
+<h1 class="mt-5 mb-4 header">Add New Products</h1>
 <%if(errorMessage){%>
     <div class="alert alert-danger" role="alert">
         <%=errorMessage%>
     </div>
     <%}%>
-        <h1 class="mt-5 mb-4">Add New Product</h1>
         <form action="/" method="post">
             <label for="name" class="form-label">Product Name</label>
             <input type="text" class="form-control" id="name" name="name">
