Added Registration Form

--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -32,6 +32,9 @@
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="/new">Add Product</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="/register">Register</a>
+                    </li>
                 </ul>
             </div>
         </div>
