--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -35,6 +35,9 @@
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="/register">Register</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="/login">LogIn</a>
+                    </li>
                 </ul>
             </div>
         </div>
