--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -30,14 +30,20 @@
                         <a class="nav-link active" aria-current="page" href="/">Products</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/new">Add Product</a>
+                        <a class="nav-link" aria-current="page" href="/add-product">Add Product</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/register">Register</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/login">LogIn</a>
-                    </li>
+                    <% if(locals.userEmail) {%>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="/logout">Log Out</a>
+                        </li>
+                        <%} else { %>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="/register">Register</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="/login">LogIn</a>
+                            </li>
+                            <%} %>
                 </ul>
             </div>
         </div>
